gcc/testsuite/rust/rustc/ui/feature-gates/doc-rust-logo.rs
#![doc(rust_logo)]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
//! This is not an official rust crate

fn main() {}

